<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".ui.auth.ForgotPasswordActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_forgot_password"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="@drawable/all_arrow_back_default" />

    <TextView
        android:id="@+id/tv_forgot_password_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:fontFamily="@font/notosansjp_bold"
        android:includeFontPadding="false"
        android:text="@string/forgot_password_title"
        android:textColor="@color/dark_gray"
        android:textSize="21sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar_forgot_password" />

    <TextView
        android:id="@+id/tv_forgot_password_guide"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17.5dp"
        android:layout_marginTop="4.5dp"
        android:fontFamily="@font/notosansjp_regular"
        android:includeFontPadding="false"
        android:text="@string/forgot_password_guide"
        android:textColor="@color/dark_gray"
        android:textSize="15sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_title" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_forgot_password_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="18dp"
        android:layout_marginTop="18dp"
        android:hint="@string/forgot_password_email_input"
        android:paddingStart="0dp"
        android:paddingEnd="-9dp"
        android:theme="@style/Theme.Bharefood.EndIconMode"
        app:boxBackgroundColor="@color/transparent"
        app:boxCollapsedPaddingTop="0dp"
        app:endIconDrawable="@drawable/ic_clear"
        app:endIconMode="clear_text"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_forgot_password_guide">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/et_forgot_password_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:cursorVisible="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/notosansjp_medium"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:includeFontPadding="false"
            android:inputType="textNoSuggestions|textEmailAddress"
            android:paddingStart="0dp"
            android:paddingTop="27.5dp"
            android:paddingEnd="0dp"
            android:paddingBottom="9dp"
            android:singleLine="true"
            android:textColor="@color/dark_gray"
            android:textSize="15sp">

            <requestFocus />
        </com.google.android.material.textfield.TextInputEditText>
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_forgot_password"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:background="@drawable/btn_primary_background"
        android:fontFamily="@font/notosansjp_regular"
        android:text="@string/forgot_password_process_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cv_forgot_password_loading"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:clickable="false"
        android:visibility="invisible"
        app:cardBackgroundColor="@color/primary"
        app:cardCornerRadius="0dp"
        app:cardElevation="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <ProgressBar
            android:layout_width="24.5dp"
            android:layout_height="24.5dp"
            android:layout_gravity="center"
            android:indeterminate="true"
            android:indeterminateTint="@color/white" />
    </androidx.cardview.widget.CardView>

    <!--<androidx.cardview.widget.CardView-->
    <!--    android:id="@+id/cv_forgot_password_process_button"-->
    <!--    android:layout_width="0dp"-->
    <!--    android:layout_height="52dp"-->
    <!--    android:background="@drawable/btn_primary_background"-->
    <!--    app:cardBackgroundColor="@color/primary"-->
    <!--    app:cardElevation="@null"-->
    <!--    app:layout_constraintBottom_toBottomOf="parent"-->
    <!--    app:layout_constraintEnd_toEndOf="parent"-->
    <!--    app:layout_constraintStart_toStartOf="parent">-->

    <!--    <TextView-->
    <!--        android:id="@+id/tv_forgot_password_process_button"-->
    <!--        android:layout_width="wrap_content"-->
    <!--        android:layout_height="wrap_content"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:fontFamily="@font/notosansjp_regular"-->
    <!--        android:paddingTop="2dp"-->
    <!--        android:text="@string/forgot_password_process_button"-->
    <!--        android:textColor="@color/white"-->
    <!--        android:textSize="16sp" />-->

    <!--    <ProgressBar-->
    <!--        android:id="@+id/loading_forgot_password_button"-->
    <!--        android:layout_width="24.5dp"-->
    <!--        android:layout_height="24.5dp"-->
    <!--        android:layout_gravity="center"-->
    <!--        android:indeterminate="true"-->
    <!--        android:indeterminateTint="@color/white"-->
    <!--        android:visibility="gone" />-->
    <!--</androidx.cardview.widget.CardView>-->

</androidx.constraintlayout.widget.ConstraintLayout>